# mini-redis

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.client  README.md  client.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  server.py
