[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | _build
  | build
  | dist
  | .*_pb2\.py
  | .*_pb2_grpc\.py
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
skip = ["*_pb2.py", "*_pb2_grpc.py"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    ".*_pb2\\.py$",
    ".*_pb2_grpc\\.py$",
]

[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0913",  # too-many-arguments
]

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "Run", "_", "id", "key"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"